[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tooltoad"
version = "1.0.0"
description = "A collection of computational chemisty utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit",
    "numpy",
    "matplotlib",
    "hide_warnings",
    "tqdm",
    "python-dotenv",
    "py3Dmol",
    "tabulate",
    "tomli",
    "networkx",
    "scikit-learn",
    "rmsd",
]

[tool.setuptools]
packages = ["tooltoad"]
